ex12/dev-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-dev
  labels:
    app: nginx
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
